--- a/css/estilos.css
+++ b/css/estilos.css
@@ -46,11 +46,10 @@ body {
 
 .card {
   border: solid 0.4rem rgb(238, 235, 37);
-  background-color: rgb(255, 255, 255);
   width: 250px;
   border-radius: 16px;
   overflow: hidden;
-  box-shadow: 0.3rem 0.3rem 0.4rem rgba(43, 43, 43, 0.7);
+  box-shadow: 0 0 1rem rgb(255, 234, 0), 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.473);
 }
 .card-body {
   display: flex;
